_kube/spinnaker-replicaset.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: demo
  name: manual-ecr-token-updater
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: manual-ecr-token-updater
    spec:
      volumes:
      - name: ecr-token-updater-script
        configMap:
          name: ecr-token-updater-script
      containers:
      - name: manual-ecr-token-updater
        image: demo/devops/aws-jq-kubectl:0.0.1
        command:
        - /bin/sh
        - -c
        - >
          mkdir -p /root/.aws;
          touch /root/.aws/credentials;
          echo "[default]" > /root/.aws/credentials;
          cat /root/.aws/credentials;
          /ecr/update-ecr-tokens.sh;
          sleep 3600
        volumeMounts:
        - name: ecr-token-updater-script
          mountPath: "/ecr"
          readOnly: true
