_kube/token-refresh-non-spinnaker-replicaset.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: sharedservices
  name: manual-ecr-token-updater
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: manual-ecr-token-updater
    spec:
      containers:
      - image: demo/devops/aws-jq-kubectl:0.0.1
        imagePullPolicy: IfNotPresent
        name: ecr-token-refresh
        command:
            - /bin/sh
            - -c
            - |-
              [...]
        volumeMounts:
          - name: kubectl-config
            mountPath: "/root/.kube/config"
            subPath: config
          - name: ecr-token-config
            mountPath: "/tmp/update-ecr-tokens.sh"
            subPath: update-ecr-tokens.sh
      volumes:
      - name: kubectl-config
        secret:
          secretName: kubectl-config
          items:
          - key: config
            path: config
      - name: ecr-token-config
        configMap: 
          name: ecr-token-updater-script
          items:
          - key: update-ecr-tokens.sh
            path: update-ecr-tokens.sh
