_kube/ingress.yml
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-ingress
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: spinnaker.services.tomarv2.com
    http:
      paths:
      - backend:
          serviceName: spin-deck
          servicePort: 9000
